force-app/main/default/objects/Contact/fields/AB_Bank__c.field-meta.xml
<CustomField>
    <fullName>AB_Bank__c</fullName>
    <label>AB Bank</label>
    <length>20</length>
    <type>Text</type>
</CustomField>