force-app/main/default/objects/Contact/fields/ABM_Key_Account_Current__c.field-meta.xml
<CustomField>
    <fullName>ABM_Key_Account_Current__c</fullName>
    <formula>Account.ABM_Key_Account_Current__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populates from the associated Account record.</inlineHelpText>
    <label>ABM Key Account Current</label>
    <type>Checkbox</type>
</CustomField>