force-app/main/default/objects/Contact/fields/Account_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Status__c</fullName>
    <formula>Account.Customer_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populates Customer Status from teh associated Account record.</inlineHelpText>
    <label>Account Customer Status</label>
    <type>Text</type>
</CustomField>