force-app/main/default/objects/Contact/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <description>Pardot Dynamic Content will only pick the prospects fields as variants. Hence created this field, to have the industry field as a variant for sending emails to the contacts.</description>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populates from respective Account. Please edit the account to change it.</inlineHelpText>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>