force-app/main/default/objects/Contact/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Created this field for setting the Automation and Segmentation rules in Pardot.</description>
    <formula>TEXT(Account.Account_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populates from respective Account. Edit the account to change it.</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>