force-app/main/default/objects/Contact/fields/AEP_Member__c.field-meta.xml
<CustomField>
    <fullName>AEP_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box for indicating if the contact has an active AEP license</description>
    <label>AEP Member</label>
    <type>Checkbox</type>
</CustomField>