force-app/main/default/objects/Contact/fields/algnlta__Lock_Contact__c.field-meta.xml
<CustomField>
    <fullName>algnlta__Lock_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the contact will be &quot;locked&quot; and it&apos;s email domain will not be summarized on the account.</description>
    <inlineHelpText>If checked, the contact will be &quot;locked&quot; and it&apos;s email domain will not be summarized on the account.</inlineHelpText>
    <label>Lock Contact</label>
    <type>Checkbox</type>
</CustomField>