force-app/main/default/objects/Contact/fields/AR_End_User__c.field-meta.xml
<CustomField>
    <fullName>AR_End_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if ARM/Vault End User.</inlineHelpText>
    <label>AR End User</label>
    <type>Checkbox</type>
</CustomField>