force-app/main/default/objects/Contact/fields/AutoRABIT_Products__c.field-meta.xml
<CustomField>
    <fullName>AutoRABIT_Products__c</fullName>
    <inlineHelpText>This field is used in the Website - Plans - Request a Quote Form.</inlineHelpText>
    <label>AutoRABIT Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>