force-app/main/default/objects/Contact/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Champion</label>
    <type>Checkbox</type>
</CustomField>