force-app/main/default/objects/Contact/fields/Contact_Rating__c.field-meta.xml
<CustomField>
    <fullName>Contact_Rating__c</fullName>
    <label>Contact Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>