force-app/main/default/objects/Contact/fields/Contact_Source_Strikedeck__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source_Strikedeck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field has a two-way sync enabled from Strikedeck. Checked means this contact came from Strikedeck</description>
    <label>Contact Source_Strikedeck</label>
    <type>Checkbox</type>
</CustomField>