force-app/main/default/objects/Contact/fields/Contact_Stage__c.field-meta.xml
<CustomField>
    <fullName>Contact_Stage__c</fullName>
    <label>Contact Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>