force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-Lead</fullName>
                <default>true</default>
                <label>1-Lead</label>
            </value>
            <value>
                <fullName>2-Subscriber</fullName>
            </value>
            <value>
                <fullName>4-MQL</fullName>
            </value>
            <value>
                <fullName>5-Intro Call Scheduled</fullName>
            </value>
            <value>
                <fullName>6-Intro Call Held</fullName>
            </value>
            <value>
                <fullName>3-Prospect</fullName>
                <isActive>false</isActive>
                <label>3-Prospect</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>