force-app/main/default/objects/Contact/fields/Current_Sequence_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Sequence_User_Name__c</fullName>
    <inlineHelpText>Field mapped to Outreach.io Current Sequence User Name.</inlineHelpText>
    <label>Current Sequence User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>