force-app/main/default/objects/Contact/fields/Date_No_Longer_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_No_Longer_Customer__c</fullName>
    <description>Churn Date from the associated account.</description>
    <formula>Account.Churn_Intent_Communication_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date account is churned.</inlineHelpText>
    <label>Date No Longer Customer</label>
    <type>Date</type>
</CustomField>