force-app/main/default/objects/Contact/fields/Days_in_3_Prospect_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_3_Prospect_Status__c</fullName>
    <description>Created for Reporting Purpose.</description>
    <formula>IF(TEXT( Contact_Status__c ) = &quot;3-Prospect&quot;, Now() - X3_Prospect_Status_In__c,  X3_Prospect_Status_Out__c - X3_Prospect_Status_In__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days contact in 3-Prospect status.</inlineHelpText>
    <label>Days in 3-Prospect Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>