force-app/main/default/objects/Contact/fields/Days_in_4_MQL_Status__c.field-meta.xml
<CustomField>
    <fullName>Days_in_4_MQL_Status__c</fullName>
    <description>Created for Reporting Purpose.</description>
    <formula>IF(TEXT( Contact_Status__c ) = &quot;4-MQL&quot;, Now() - X4_MQL_Status_In__c, X4_MQL_Status_Out__c - X4_MQL_Status_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days contact in 4-MQL status.</inlineHelpText>
    <label>Days in 4-MQL Status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>