force-app/main/default/objects/Contact/fields/Days_in_5_Intro_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Days_in_5_Intro_Call_Scheduled__c</fullName>
    <description>Created for Reporting Purpose.</description>
    <formula>IF(TEXT( Contact_Status__c ) = &quot;5-Intro Call Scheduled&quot;, Now() - X5_Intro_Call_Scheduled_Status_In__c, X5_Intro_Call_Scheduled_Status_Out__c - X5_Intro_Call_Scheduled_Status_In__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of days contact in 5-Intro Call Scheduled status.</inlineHelpText>
    <label>Days in 5-Intro Call Scheduled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>