force-app/main/default/objects/Contact/fields/DC_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Completed_Date__c</fullName>
    <label>DC Completed Date (CI/CD)</label>
    <type>Date</type>
</CustomField>