force-app/main/default/objects/Contact/fields/DC_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_Date__c</fullName>
    <label>DC Scheduled On (CI/CD)</label>
    <type>Date</type>
</CustomField>