force-app/main/default/objects/Contact/fields/DC_Scheduled_Date_Vault__c.field-meta.xml
<CustomField>
    <fullName>DC_Scheduled_Date_Vault__c</fullName>
    <inlineHelpText>DC Scheduled Date to be captured for VAULT</inlineHelpText>
    <label>DC Scheduled On (Vault)</label>
    <type>Date</type>
</CustomField>