force-app/main/default/objects/Contact/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <label>Decision Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Need Picklist Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>