force-app/main/default/objects/Contact/fields/Delete_From_CRM__c.field-meta.xml
<CustomField>
    <fullName>Delete_From_CRM__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if the contact is no longer needed in the CRM.</description>
    <inlineHelpText>Check if the contact is no longer needed in the CRM.</inlineHelpText>
    <label>Delete From CRM</label>
    <type>Checkbox</type>
</CustomField>