force-app/main/default/objects/Contact/fields/Demo_Performed_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Performed_Date__c</fullName>
    <label>Demo Performed Date (CI/CD)</label>
    <type>Date</type>
</CustomField>