force-app/main/default/objects/Contact/fields/First_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>First_Call_Attempt__c</fullName>
    <inlineHelpText>Date/Time first Outreach.io activity made for Task Type &quot;Call&quot;.</inlineHelpText>
    <label>First Call Attempt</label>
    <type>DateTime</type>
</CustomField>