force-app/main/default/objects/Contact/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <description>Created this field for Pardot Grading purpose.</description>
    <formula>TEXT(Account.Integration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Populates from respective Account. Please edit the account to change it.</inlineHelpText>
    <label>Integration</label>
    <type>Text</type>
</CustomField>