force-app/main/default/objects/Contact/fields/isLinked__c.field-meta.xml
<CustomField>
    <fullName>isLinked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLinked</label>
    <type>Checkbox</type>
</CustomField>