force-app/main/default/objects/Contact/fields/Last_Call_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Attempt__c</fullName>
    <inlineHelpText>Date/Time last Outreach.io activity made for Task Type &quot;Call&quot;.</inlineHelpText>
    <label>Last Call Attempt</label>
    <type>DateTime</type>
</CustomField>