force-app/main/default/objects/Contact/fields/Lead_Status_Prior_Converting__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Prior_Converting__c</fullName>
    <label>Lead Status Prior Converting</label>
    <length>30</length>
    <type>Text</type>
</CustomField>