force-app/main/default/objects/Contact/fields/Lost_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Lost_Contact_Status__c</fullName>
    <description>Contact Status when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</description>
    <inlineHelpText>Contact Status when the Contact Stage is set to &quot;Lost&quot; for Lost Reasons other than &apos;Bad Email&apos;, &apos;Bad Phone&apos;, &apos;Bad Email &amp; Bad Phone&apos;, and &apos;Changed Organization&apos;. Created this field for reporting purposes.</inlineHelpText>
    <label>Lost Contact Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>