force-app/main/default/objects/Contact/fields/MA_Notes__c.field-meta.xml
<CustomField>
    <fullName>MA_Notes__c</fullName>
    <description>Additional Information from Market Analysts.</description>
    <inlineHelpText>Additional Information from Market Analysts.</inlineHelpText>
    <label>MA Notes</label>
    <type>TextArea</type>
</CustomField>