force-app/main/default/objects/Contact/fields/MA_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>MA_Review_Date__c</fullName>
    <description>Date an MA reviewed the contact for new demographic info</description>
    <inlineHelpText>Date an MA reviewed the contact for new demographic info</inlineHelpText>
    <label>MA Review Date</label>
    <type>Date</type>
</CustomField>