force-app/main/default/objects/Contact/fields/Newcontactfield__c.field-meta.xml
<CustomField>
    <fullName>Newcontactfield__c</fullName>
    <label>Newcontactfield</label>
    <length>18</length>
    <type>Text</type>
</CustomField>