force-app/main/default/objects/Contact/fields/No_Longer_with_the_Company__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_with_the_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the contact is no longer with the company.</inlineHelpText>
    <label>No Longer with the Company</label>
    <type>Checkbox</type>
</CustomField>