force-app/main/default/objects/Contact/fields/No_of_CI_CD_users__c.field-meta.xml
<CustomField>
    <fullName>No_of_CI_CD_users__c</fullName>
    <description>Number of users for CI/CD</description>
    <inlineHelpText>Enter numeric values only.</inlineHelpText>
    <label>No. of CI/CD users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>