force-app/main/default/objects/Contact/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <label>Org Name</label>
    <type>Email</type>
</CustomField>