force-app/main/default/objects/Contact/fields/Owner_Status__c.field-meta.xml
<CustomField>
    <fullName>Owner_Status__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact Owner Status. True for Active.</inlineHelpText>
    <label>Owner Status</label>
    <type>Checkbox</type>
</CustomField>