force-app/main/default/objects/Contact/fields/Pendo_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Pendo_Account_ID__c</fullName>
    <label>Pendo_Account ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>