force-app/main/default/objects/Contact/fields/Pendo_NPS_Score_from_Pendo__c.field-meta.xml
<CustomField>
    <fullName>Pendo_NPS_Score_from_Pendo__c</fullName>
    <label>Pendo_&quot;NPS Score from Pendo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>