force-app/main/default/objects/Contact/fields/Pendo_VisitorID__c.field-meta.xml
<CustomField>
    <fullName>Pendo_VisitorID__c</fullName>
    <label>Pendo_Visitor ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>