force-app/main/default/objects/Contact/fields/Pick_a_Date__c.field-meta.xml
<CustomField>
    <fullName>Pick_a_Date__c</fullName>
    <description>Created for Dreamforce RSVP Forms in Pardot.</description>
    <inlineHelpText>Happy Hour Form Date.</inlineHelpText>
    <label>Pick a Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tuesday, September 20</fullName>
            </value>
            <value>
                <fullName>Wednesday, September 21</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>