force-app/main/default/objects/Contact/fields/Primary_AR_Admin__c.field-meta.xml
<CustomField>
    <fullName>Primary_AR_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary AR Admin</label>
    <type>Checkbox</type>
</CustomField>