force-app/main/default/objects/Contact/fields/Prior_Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Contact_Status__c</fullName>
    <inlineHelpText>Previous Contact Status we had before it changed to the current one.</inlineHelpText>
    <label>Prior Contact Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>