force-app/main/default/objects/Contact/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No BANT</fullName>
            </value>
            <value>
                <fullName>Needs Nurturing</fullName>
            </value>
            <value>
                <fullName>No Product Fit</fullName>
            </value>
            <value>
                <fullName>Not Salesforce Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>