force-app/main/default/objects/Contact/fields/Referenceable__c.field-meta.xml
<CustomField>
    <fullName>Referenceable__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by the Customer Success Team.</inlineHelpText>
    <label>Referenceable</label>
    <type>Checkbox</type>
</CustomField>